unpackaged/main/default/objects/Contact/fields/Dont_Delete__c.field-meta.xml
<CustomField>
    <fullName>Dont_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dont Delete</label>
    <type>Checkbox</type>
</CustomField>