unpackaged/main/default/objects/Contact/fields/New_contact__c.field-meta.xml
<CustomField>
    <fullName>New_contact__c</fullName>
    <formula>&#39;https://iqra-e-dev-ed--c.vf.force.com/flow/Flow_for_URL?CityName=&#39; &amp;  MailingCity  &amp; &#39;&amp;PhoneNumber=&#39;  &amp; Phone &amp;  &#39;&amp;StateName=&#39; &amp;  MailingState &amp; &#39;&amp;LookupAccount=&#39; &amp;  AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New contact</label>
    <type>Text</type>
</CustomField>