unpackaged/main/default/objects/Contact/fields/Yes_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Yes_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yes Duplicate</label>
    <type>Checkbox</type>
</CustomField>