unpackaged/main/default/objects/Contact/fields/YesItHasDuplicateEmailAndPhone__c.field-meta.xml
<CustomField>
    <fullName>YesItHasDuplicateEmailAndPhone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YesItHasDuplicateEmailAndPhone</label>
    <type>Checkbox</type>
</CustomField>