unpackaged/main/default/objects/Contact/validationRules/Do_not_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_Duplicate</fullName>
    <active>false</active>
    <errorConditionFormula>YesItHasDuplicateEmailAndPhone__c</errorConditionFormula>
    <errorMessage>There is duplicate name in it</errorMessage>
</ValidationRule>