unpackaged/main/default/objects/Contact/validationRules/Hit_Error_While_Deleting_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Hit_Error_While_Deleting_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>Dont_Delete__c</errorConditionFormula>
    <errorMessage>You can not delete a record because it is associated with parent</errorMessage>
</ValidationRule>