unpackaged/main/default/objects/Contact/validationRules/Just_Time_Pass.validationRule-meta.xml
<ValidationRule>
    <fullName>Just_Time_Pass</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    ISBLANK( AccountId ) ,
    ISBLANK( MailingStreet ) ,
    Account.BillingStreet  &lt;&gt; MailingStreet
   )</errorConditionFormula>
    <errorMessage>Dont show attitude</errorMessage>
</ValidationRule>